[gd_scene load_steps=7 format=2]

[ext_resource path="res://Cenas/minimapa/MiniMap.gd" type="Script" id=1]
[ext_resource path="res://imagens/minimap/panel_boltsDetailSquare_blank.png" type="Texture" id=2]
[ext_resource path="res://imagens/minimap/patternStripesShadow_small.png" type="Texture" id=3]
[ext_resource path="res://imagens/minimap/minimapIcon_arrowA.png" type="Texture" id=4]
[ext_resource path="res://imagens/minimap/minimapIcon_jewelRed.png" type="Texture" id=5]
[ext_resource path="res://imagens/minimap/minimapIcon_exclamationYellow.png" type="Texture" id=6]

[node name="MiniMap" type="MarginContainer"]
margin_right = 200.0
margin_bottom = 200.0
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Frame" type="NinePatchRect" parent="."]
margin_left = 5.0
margin_top = 5.0
margin_right = 195.0
margin_bottom = 195.0
texture = ExtResource( 2 )
patch_margin_left = 7
patch_margin_top = 6
patch_margin_right = 7
patch_margin_bottom = 6

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 5.0
margin_top = 5.0
margin_right = 195.0
margin_bottom = 195.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="Grid" type="TextureRect" parent="MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 170.0
margin_bottom = 170.0
texture = ExtResource( 3 )
stretch_mode = 2

[node name="PlayerMarker" type="Sprite" parent="MarginContainer/Grid"]
position = Vector2( 75, 75 )
texture = ExtResource( 4 )

[node name="MobMarker" type="Sprite" parent="MarginContainer/Grid"]
visible = false
position = Vector2( 36.8283, 37.6892 )
texture = ExtResource( 5 )

[node name="AlertMarker" type="Sprite" parent="MarginContainer/Grid"]
visible = false
position = Vector2( 122.93, 112.982 )
texture = ExtResource( 6 )
[connection signal="gui_input" from="." to="." method="_on_MiniMap_gui_input"]
